poc-sinatra-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-sinatra-svc
  namespace: forge-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9292
    name: http
  selector:
    deployment: poc-sinatra
  type: NodePort
